# open-ahrefs

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  debug.sql  docker-compose.admin.yml  docker-compose.grafana.yml  docker-compose.scraper.yml  docker-compose.yml  makefile
admin-service/: Dockerfile  main.py  pyproject.toml
admin-service/alembic/: env.py
admin-service/alembic/versions/: 2c6d1d32218d_.py  2d8300856f5d_.py  466e6ceed99e_.py  74c341fc9c92_.py  8681e233a078_.py  93c3f747cc4d_.py  b937d0a0d45c_.py  bae1b198e331_.py  c9a3ef45bd01_.py  ddf6d44b9ce3_.py  e73fe2c19599_.py  efeeb019d649_.py
admin-service/app/: main.py
admin-service/app/background/: pipe_pull.py  pipe_push.py  task.py
admin-service/app/config/: settings.py
admin-service/app/db/: engine.py  models.py
admin-service/app/endpoints/: crudtask.py
admin-service/app/tools/: custom_grafana.py  find_add_url.py  url_to_obj.py
admin-service/config/: settings.py
admin-service/db/: engine.py  models.py
admin-service/models/: models.py
common_schemas/: pyproject.toml
common_schemas/common_schemas/: kafka_models.py  user_models.py
grafana/: prometheus.yml
grafana/dashboards/: MyKafka.json
k8s/: README.md
k8s/kafka/: README.md  kafka-single-node.yaml  kafka-strimzi-io.yml  kafka-ui.yml
k8s/my-base/: Chart.yaml
k8s/my-base/templates/: kafka-ui.yml  kafka.yml  postgres-ui.yml  postgres.yml  secret.yml
k8s/postgres/: README.md
scraper-service/: Dockerfile  pyproject.toml
scraper-service/app/: main.py
scraper-service/app/config/: settings.py
scraper-service/app/tools/: scraper.py
