[project]
name = "common-schemas"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad Kudelko", email = "vlad1kudelko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


# Указываем, какие пакеты включить
[tool.setuptools.packages]
find = {where = ["."]}
