[tool.poetry]
name = "scraper-service"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    "Vlad Kudelko <vlad1kudelko@gmail.com>"
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"

pydantic = ">=2.12.5,<3.0.0"
aiokafka = "^0.12.0"
requests = "^2.32.5"

common_schemas = {path = "../common_schemas", develop = true}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
