[tool.poetry]
name = "scraper-service"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    "Vlad Kudelko <vlad1kudelko@gmail.com>"
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"

aiokafka = "^0.12.0"
requests = "^2.32.5"
pydantic-settings = "^2.12.0"
aiohttp = {extras = ["speedups"], version = "^3.13.2"}

common_schemas = {path = "../common_schemas", develop = true}
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
